Fix for BUG#53305 "Duplicate weedout + join buffer (join cache --level=7,8) loses rows" When joining records, JOIN_CACHE_BKA_UNIQUE forgot to set the rowid, so some rows were wrongly said to have the same rowid and were wrongly deleted by Duplicate Weedout.